# orgacomp-tp

./: .gitignore  CMakeLists.txt  Main  README.md  TODO  compile.sh  debug.cpp  main.cpp  main.sh  make.sh  matrix.txt  processImage.asm  processImage.s  processPixel.asm  processPixel.s
Consigna/: DisplayImage.cpp
